# rsim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: person.h
include/distribution/: birth.h  life_expectancy.h  population.h  salary.h
include/utils/: datetime.h  random.h
src/: CMakeLists.txt  main.cpp  random.cpp
src/distribution/: birth.cpp
src/utils/: datetime.cpp  random.cpp
